--- a/pages/permissions/menuManage/menu_manage.html
+++ b/pages/permissions/menuManage/menu_manage.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../../../static/css/font.css">
     <link rel="stylesheet" href="../../../static/css/weadmin.css">
     <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../../static/js/showPOP.js"></script>
+    <!--<script type="text/javascript" src="../../../static/js/showPOP.js"></script>-->
     <script src="menu_manage.js" type="text/javascript" charset="utf-8"></script>
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
@@ -33,13 +33,16 @@
 		        <a><cite>菜单管理</cite></a>
 		    </span>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
-        <i class="layui-icon" style="line-height:30px">ဂ</i></a>
+        <i class="layui-icon" style="line-height:30px">&#x1002;</i></a>
+</div>
+<div id="testText" >
+    <!--菜单不可随意更改目录-->
 </div>
 <div class="weadmin-body">
     <div class="weadmin-block">
         <button class="layui-btn" id="expand">全部展开</button>
         <button class="layui-btn" id="collapse">全部收起</button>
-        <button class="layui-btn" onclick="WeAdminShow('添加分类','./menuAdd.html')"><i class="layui-icon"></i>添加</button>
+        <button class="layui-btn" onclick="WeAdminShow('添加菜单','./MenuAdd.html')"><i class="layui-icon"></i>添加</button>
         <span id ="total"class="fr" style="line-height:40px">共有菜单数据：66 条</span>
     </div>
 
