--- a/pages/permissions/menuManage/MenuAdd.html
+++ b/pages/permissions/menuManage/MenuAdd.html
@@ -44,26 +44,26 @@
         <div class="layui-form-item">
             <label class="layui-form-label">菜单名称</label>
             <div class="layui-input-block">
-                <input id="menuName" type="text" name="title" lay-verify="required" jq-error="请输入菜单名称" placeholder="请输入菜单名称" autocomplete="off" class="layui-input ">
+                <input id="menuName" type="text" name="menuname" lay-verify="required" jq-error="请输入菜单名称" placeholder="请输入菜单名称" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">菜单地址</label>
             <div class="layui-input-block">
-                <input  id="menuUrl" type="text" name="title" lay-verify="required" jq-error="请输入菜单地址" placeholder="请输入菜单地址,如‘/HotelAdmin/pages/home/home.html’" autocomplete="off" class="layui-input ">
+                <input  id="menuUrl" type="text" name="menuurl" lay-verify="required" jq-error="请输入菜单地址" placeholder="请输入菜单地址,如‘/HotelAdmin/pages/home/home.html’" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">排序</label>
             <div class="layui-input-inline">
-                <input id="menuSort" type="text" name="order" lay-verify="number" value="100" jq-error="排序必须为数字" placeholder="分类排序" autocomplete="off" class="layui-input ">
+                <input id="menuSort" type="text" name="sort" lay-verify="number" value="100" jq-error="排序必须为数字" placeholder="分类排序" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">状态</label>
             <div class="layui-input-inline">
-                <input id="radio1" type="radio" name="switch" title="启用" value="1" checked />
-                <input  id="radio2"type="radio" name="switch" title="禁用" value="0" />
+                <input id="radio1" type="radio" name="status" title="启用" value="1" checked />
+                <input  id="radio2"type="radio" name="status" title="禁用" value="0" />
             </div>
         </div>
         <div class="layui-form-item">
