--- a/pages/permissions/menuManage/MenuEdit.html
+++ b/pages/permissions/menuManage/MenuEdit.html
@@ -1,10 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>编辑菜单</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" href="../../../static/css/font.css">
+    <link rel="stylesheet" href="../../../static/css/weadmin.css">
+    <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
+    <script src="MenuEdit.js" type="text/javascript" charset="utf-8"></script>
 
+    <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
+    <!--[if lt IE 9]>
+    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+<div class="weadmin-body">
+
+    <form id="form1" class="layui-form">
+        <div class="layui-form-item">
+            <label class="layui-form-label">父级菜单</label>
+            <div class="layui-input-inline">
+                <select name="pid" id="pid-select" lay-verify="required" lay-filter="pid-select">
+                </select>
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">菜单名称</label>
+            <div class="layui-input-block">
+                <input id="menuName" type="text" name="menuname" lay-verify="required" jq-error="请输入菜单名称"
+                       placeholder="请输入菜单名称" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">菜单地址</label>
+            <div class="layui-input-block">
+                <input id="menuUrl" type="text" name="menuurl" lay-verify="required" jq-error="请输入菜单地址"
+                       placeholder="请输入菜单地址,如‘/HotelAdmin/pages/home/home.html’"
+                       autocomplete="off" class="layui-input ">
+            </div>
+
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label"></label>
+            <div class="layui-form-mid layui-word-aux">
+                <span class="we-red">*</span>当父级菜单是顶级菜单时，填入‘Javascript:;’
+            </div>
+
+        </div>
+
+        <div class="layui-form-item ">
+            <label class="layui-form-label">菜单图标</label>
+            <div class="layui-input-inline">
+                <input id="menuIcon" type="text" name="menuicon" placeholder="菜单图标"
+                       autocomplete="off" class="layui-input ">
+            </div>
+            <div class="layui-form-mid layui-word-aux">
+                <span class="we-red">*</span>当父级菜单是顶级菜单时，填入icon图标，其余不填
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">排序</label>
+            <div class="layui-input-inline">
+                <input id="menuSort" type="text" name="sort" lay-verify="number" value="100" jq-error="排序必须为数字"
+                       placeholder="分类排序" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">状态</label>
+            <div class="layui-input-inline">
+                <input id="radio1" type="radio" name="status" title="启用" value="1" checked/>
+                <input id="radio2" type="radio" name="status" title="禁用" value="0"/>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-input-block">
+                <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
+                <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
+            </div>
+        </div>
+        <input type="hidden" name="menuid" value="0"/>
+    </form>
+</div>
+
+<!--<script type="text/javascript">-->
+<!--layui.extend({-->
+<!--admin: '{/}../../static/js/admin'-->
+<!--});-->
+<!--layui.use(['admin','jquery','form', 'layer'], function() {-->
+<!--var admin = layui.admin,-->
+<!--$ = layui.jquery,-->
+<!--form = layui.form,-->
+<!--layer = layui.layer;-->
+
+<!--//监听提交-->
+<!--form.on('submit(add)', function(data) {-->
+<!--console.log(data.field);-->
+<!--//发异步，把数据提交给php-->
+<!--layer.alert("增加成功", {-->
+<!--icon: 6-->
+<!--}, function() {-->
+<!--// 获得frame索引-->
+<!--var index = parent.layer.getFrameIndex(window.name);-->
+<!--//关闭当前frame-->
+<!--parent.layer.close(index);-->
+<!--});-->
+<!--return false;-->
+<!--});-->
+
+<!--//遍历select option-->
+<!--$(document).ready(function(){-->
+<!--$("#pid-select option").each(function (text){-->
+<!--var level = $(this).attr('data-level');-->
+<!--var text = $(this).text();-->
+<!--console.log(text);-->
+<!--if(level>0){-->
+<!--text = "├　"+ text;-->
+<!--for(var i=0;i<level;i++){-->
+<!--text ="　　"+ text;　//js中连续显示多个空格，需要使用全角的空格-->
+<!--//console.log(i+"text:"+text);-->
+<!--}-->
+<!--}-->
+<!--$(this).text(text);-->
+
+<!--});-->
+
+<!--form.render('select'); //刷新select选择框渲染-->
+<!--});-->
+
+<!--});-->
+<!--</script>-->
 </body>
+
 </html>
