--- a/pages/permissions/roleManage/role_manage.html
+++ b/pages/permissions/roleManage/role_manage.html
@@ -10,6 +10,9 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../../../static/css/font.css">
     <link rel="stylesheet" href="../../../static/css/weadmin.css">
+    <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
+    <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
+    <script src="role_manage.js" charset="utf-8"></script>
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -66,9 +69,7 @@
         </div>
     </div>
 </div>
-<!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
-<script src="../../../lib/layui/layui.js" charset="utf-8"></script>
-<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>
+
 </body>
 
 </html>
