--- a/pages/permissions/roleManage/RoleAdd.html
+++ b/pages/permissions/roleManage/RoleAdd.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>新增角色</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" type="text/css" href="../../../lib/layui/css/layui.css">
+    <link rel="stylesheet" href="../../../static/css/font.css">
+    <link rel="stylesheet" href="../../../static/css/weadmin.css">
+    <script type="text/javascript" src="../../../lib/layui/layui.js"></script>
+    <script type="text/javascript" src="RoleAdd.js"></script>
 </head>
 <body>
+<div class="layui-container">
 
+    <div class="layui-row">
+        <div class="layui-col-md6 layui-col-md-offset1">
+            <fieldset class="layui-elem-field layui-field-title"><legend>新增角色</legend></fieldset>
+            <!-- 此扩展能递归渲染一个权限树，点击深层次节点，父级节点中没有被选中的节点会被自动选中，单独点击父节点，子节点会全部 选中/去选中 -->
+            <form class="layui-form">
+                <div class="layui-form-item">
+                   <label class="layui-form-label"> <span class="we-red">*</span>角色名称</label>
+                    <div class="layui-input-block">
+                        <input class="layui-input" type="text" name="name" placeholder="请输入角色名称" />
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">状态</label>
+                    <div class="layui-input-inline">
+                        <input id="radio1" type="radio" name="status" title="启用" value="1" checked/>
+                        <input id="radio2" type="radio" name="status" title="禁用" value="0"/>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">选择权限</label>
+                    <div class="layui-input-block">
+                        <div id="LAY-auth-tree-index"></div>
+                    </div>
+                </div>
+
+                <div class="layui-form-item">
+                    <div class="layui-input-block">
+                        <button class="layui-btn" type="submit">提交</button>
+                        <button class="layui-btn layui-btn-primary" type="reset">重置</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
+
 </html>
