--- a/pages/permissions/roleManage/RoleAdd.html
+++ b/pages/permissions/roleManage/RoleAdd.html
@@ -24,19 +24,25 @@
                 <div class="layui-form-item">
                    <label class="layui-form-label"> <span class="we-red">*</span>角色名称</label>
                     <div class="layui-input-block">
-                        <input class="layui-input" type="text" name="name" placeholder="请输入角色名称" />
+                        <input class="layui-input"  type="text" name="rolename" lay-verify="required" placeholder="请输入角色名称" />
                     </div>
                 </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label"> 角色描述</label>
+                        <div class="layui-input-block">
+                            <input class="layui-input" type="text" name="describe" placeholder="请输入角色描述" />
+                        </div>
+                    </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">状态</label>
                     <div class="layui-input-inline">
-                        <input id="radio1" type="radio" name="status" title="启用" value="1" checked/>
-                        <input id="radio2" type="radio" name="status" title="禁用" value="0"/>
+                        <input id="radio1" type="radio" name="state" title="启用" value="1" checked/>
+                        <input id="radio2" type="radio" name="state" title="禁用" value="0"/>
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">选择权限</label>
-                    <div class="layui-input-block">
+                    <div class="layui-input-block" >
                         <div id="LAY-auth-tree-index"></div>
                     </div>
                 </div>
