--- a/pages/permissions/roleManage/role_manage.html
+++ b/pages/permissions/roleManage/role_manage.html
@@ -43,7 +43,7 @@
     </div>
     <div class="weadmin-block">
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="WeAdminShow('添加角色','./RoleAdd.html',600,400)"><i class="layui-icon"></i>添加
+        <button class="layui-btn" onclick="AddRoleShow('添加角色','./RoleAdd.html',600,400)"><i class="layui-icon"></i>添加
         </button>
         <span id="total" class="fr" style="line-height:40px">共有数据：88 条</span>
     </div>
