--- a/pages/composite/hotelmanage/HotelAdd.html
+++ b/pages/composite/hotelmanage/HotelAdd.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>添加菜单</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" href="../../../static/css/font.css">
+    <link rel="stylesheet" href="../../../static/css/weadmin.css">
+    <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
+    <script src="MenuAdd.js" type="text/javascript" charset="utf-8"></script>
+
+    <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
+    <!--[if lt IE 9]>
+    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
+
 <body>
+<div class="weadmin-body">
+
+    <form id="form1" class="layui-form">
+
+
+        <div class="layui-form-item">
+            <label class="layui-form-label"><span class="we-red">*</span>酒店名称</label>
+            <div class="layui-input-block">
+                <input id="hotelname" type="text" name="hotelname" lay-verify="required" jq-error="请输入酒店名称" placeholder="请输入酒店名称" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">酒店地址</label>
+            <div class="layui-input-block">
+                <input  id="hoteladdress" type="text" name="hoteladdress" lay-verify="required" jq-error="请输入酒店地址" placeholder="请输入酒店地址,如‘四川省成都市高新区天府大道北段1736号’" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-input-block">
+                <button class="layui-btn" lay-submit="" lay-filter="address">查询经纬度</button>
+
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">酒店简介</label>
+            <div class="layui-input-inline">
+                <input id="hotel_profile" type="text" name="hotel_profile" lay-verify="text"   placeholder="酒店简介" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">状态</label>
+            <div class="layui-input-inline">
+                <input id="radio1" type="radio" name="status" title="启用" value="1" checked />
+                <input  id="radio2"type="radio" name="status" title="禁用" value="0" />
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-input-block">
+                <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
+                <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
+            </div>
+        </div>
+        <input type="hidden" name="level" value="0" />
+    </form>
+</div>
+
 
 </body>
+
 </html>
