--- a/pages/permissions/roleManage/RoleAdd.html
+++ b/pages/permissions/roleManage/RoleAdd.html
@@ -49,7 +49,7 @@
 
                 <div class="layui-form-item">
                     <div class="layui-input-block">
-                        <button class="layui-btn" type="submit">提交</button>
+                        <button class="layui-btn" lay-submit="" lay-filter="add">提交</button>
                         <button class="layui-btn layui-btn-primary" type="reset">重置</button>
                     </div>
                 </div>
