--- a/pages/composite/hotelmanage/HotelAdd.html
+++ b/pages/composite/hotelmanage/HotelAdd.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../../static/css/font.css">
     <link rel="stylesheet" href="../../../static/css/weadmin.css">
     <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
-    <script src="MenuAdd.js" type="text/javascript" charset="utf-8"></script>
+    <script src="HotelAdd.js" type="text/javascript" charset="utf-8"></script>
 
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
@@ -34,20 +34,37 @@
         <div class="layui-form-item">
             <label class="layui-form-label">酒店地址</label>
             <div class="layui-input-block">
-                <input  id="hoteladdress" type="text" name="hoteladdress" lay-verify="required" jq-error="请输入酒店地址" placeholder="请输入酒店地址,如‘四川省成都市高新区天府大道北段1736号’" autocomplete="off" class="layui-input ">
+                <input  id="hoteladdress" lay-verType="tips" type="text" name="hoteladdress" lay-verify="required" jq-error="请输入酒店地址" placeholder="请输入酒店地址,如‘四川省成都市高新区天府大道北段1736号’" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit="" lay-filter="address">查询经纬度</button>
-
             </div>
         </div>
-        <div class="layui-form-item">
+        <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">酒店简介</label>
-            <div class="layui-input-inline">
-                <input id="hotel_profile" type="text" name="hotel_profile" lay-verify="text"   placeholder="酒店简介" autocomplete="off" class="layui-input ">
+            <div class="layui-input-block">
+                <textarea name="hotel_profile" placeholder="酒店简介" class="layui-textarea"></textarea>
             </div>
+        </div>
+        <div class="layui-form-item layui-hide" >
+
+            <div class="layui-inline" >
+                <label class="layui-form-label">经度</label>
+                <div class="layui-input-inline" style="width: 100px;">
+                    <input type="text" name="longitude"  autocomplete="off" class="layui-input">
+                </div>
+
+            </div>
+
+            <div class="layui-inline">
+                <label class="layui-form-label">纬度</label>
+                <div class="layui-input-inline" style="width: 100px;">
+                    <input type="text" name="latitude" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">状态</label>
@@ -62,7 +79,7 @@
                 <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
-        <input type="hidden" name="level" value="0" />
+        <input type="hidden" name="hotelnum" value="0" />
     </form>
 </div>
 
