--- a/pages/composite/hotelmanage/hotel_manage.html
+++ b/pages/composite/hotelmanage/hotel_manage.html
@@ -34,43 +34,32 @@
             酒店搜索：
 
             <div class="layui-inline">
-                <input type="text" name="hotelname" placeholder="请输入酒店名字" autocomplete="off" class="layui-input">
+                <input id="hotelname" type="text" name="hotelname" placeholder="请输入酒店名字" autocomplete="off" class="layui-input">
             </div>
             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
         </form>
     </div>
     <div class="weadmin-block">
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="WeAdminShow('创建酒店','./HotelAdd.html',600,400)"><i class="layui-icon"></i>添加
+        <button class="layui-btn" onclick="AddHotel('创建酒店','./HotelAdd.html',800,600)"><i class="layui-icon"></i>添加
         </button>
-        <span  id ="total" class="fr" style="line-height:40px">共有数据：88 条</span>
+        <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
     <table class="layui-table" id="hotelList">
-        <thead>
-        <tr>
-            <th>
-                <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i
-                        class="layui-icon">&#xe605;</i></div>
-            </th>
-            <th>酒店编号</th>
-            <th>酒店名称</th>
-            <th>酒店地址</th>
-            <th>创建时间</th>
-            <th>状态</th>
-            <th>操作</th>
-        </tr>
-        </thead>
-        <tbody>
 
-        </tbody>
     </table>
     <div class="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
-<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
 <script src="hotel_manage.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/html" id="barDemo">
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+</script>
 </body>
 
 </html>
