--- a/pages/composite/hotelmanage/HotelAdd.html
+++ b/pages/composite/hotelmanage/HotelAdd.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>添加菜单</title>
+    <title>创建酒店</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -28,13 +28,13 @@
         <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>酒店名称</label>
             <div class="layui-input-block">
-                <input id="hotelname" type="text" name="hotelname" lay-verify="required" jq-error="请输入酒店名称" placeholder="请输入酒店名称" autocomplete="off" class="layui-input ">
+                <input id="name" type="text" name="name" lay-verify="required" jq-error="请输入酒店名称" placeholder="请输入酒店名称" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">酒店地址</label>
             <div class="layui-input-block">
-                <input  id="hoteladdress" lay-verType="tips" type="text" name="hoteladdress" lay-verify="required" jq-error="请输入酒店地址" placeholder="请输入酒店地址,如‘四川省成都市高新区天府大道北段1736号’" autocomplete="off" class="layui-input ">
+                <input  id="address" lay-verType="tips" type="text" name="address" lay-verify="required" jq-error="请输入酒店地址" placeholder="请输入酒店地址,如‘四川省成都市高新区天府大道北段1736号’" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
@@ -65,6 +65,15 @@
                 </div>
             </div>
 
+        </div>
+        <div class="layui-form-item">
+        <div class="layui-input-block layui-upload">
+            <button type="button" class="layui-btn" id="test2">选择酒店图片</button>
+            <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
+                酒店图片：
+                <div class="layui-upload-list" id="demo2"></div>
+            </blockquote>
+        </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">状态</label>
