--- a/pages/goods/GoodsAdd.html
+++ b/pages/goods/GoodsAdd.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>创建房间类型</title>
+    <title>创建商品</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -25,25 +25,25 @@
     <form id="form1" class="layui-form">
 
 
+
         <div class="layui-form-item">
-            <label class="layui-form-label"><span class="we-red">*</span>酒店名称</label>
+            <label class="layui-form-label"><span class="we-red">*</span>商品类型</label>
             <div class="layui-input-block">
-                <select  name="hotel" id="hotel_select" lay-verify="required" lay-filter="pid-select">
-                </select>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label"><span class="we-red">*</span>类型名称</label>
-            <div class="layui-input-block">
-                <select  name="style_name" id="style_select" lay-verify="required" lay-filter="pid-select">
+                <select  name="category_name" id="category_name" lay-verify="required" lay-filter="pid-select">
                 </select>
             </div>
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label">房间号</label>
+            <label class="layui-form-label">商品名称</label>
             <div class="layui-input-inline">
-                <input  id="room_nums" lay-verType="tips" type="text" name="room_nums" lay-verify="required"  placeholder="房间号" autocomplete="off" class="layui-input ">
+                <input  id="goods_name" lay-verType="tips" type="text" name="goods_name" lay-verify="required"  placeholder="商品名称，如‘薯片’" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">商品价格</label>
+            <div class="layui-input-inline">
+                <input  id="goods_price" lay-verType="tips" type="number" name="goods_price" lay-verify="required"  placeholder="商品价格" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
