--- a/pages/goods/goods_manage.html
+++ b/pages/goods/goods_manage.html
@@ -33,12 +33,12 @@
         <form class="layui-form layui-col-md12 we-search">
             商品类型：
             <div class="layui-input-inline">
-                <select name="goodsStyle_select">
+                <select name="goodsStyle_select" id="goodsStyle_select">
                 </select>
             </div>
             商品搜索：
             <div class="layui-inline">
-                <input id="roomstyle" type="text" name="hotelname" placeholder="请输入商品名称" autocomplete="off" class="layui-input">
+                <input id="goodsname" type="text" name="goodsname" placeholder="请输入商品名称" autocomplete="off" class="layui-input">
             </div>
             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
         </form>
@@ -59,7 +59,9 @@
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="../../lib/layui/layui.js" charset="utf-8"></script>
 <!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
-<script src="goods_style_manage.js" type="text/javascript" charset="utf-8"></script>
+<script src="goods_manage.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
