--- a/pages/goods/goods_style_manage.html
+++ b/pages/goods/goods_style_manage.html
@@ -55,6 +55,7 @@
 <script src="../../lib/layui/layui.js" charset="utf-8"></script>
 <!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
 <script src="goods_style_manage.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
