--- a/pages/composite/rooms/room_style_manage.html
+++ b/pages/composite/rooms/room_style_manage.html
@@ -45,7 +45,7 @@
         </button>
         <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
-    <table class="layui-table" id="roomstylelist">
+    <table class="layui-table" id="roomstylelist" lay-filter="roomstylelist">
 
     </table>
     <div class="page">
