--- a/pages/composite/hotelmanage/HotelAdd.html
+++ b/pages/composite/hotelmanage/HotelAdd.html
@@ -6,11 +6,15 @@
     <title>创建酒店</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../../../static/css/font.css">
     <link rel="stylesheet" href="../../../static/css/weadmin.css">
     <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
+    <script src="../../../static/js/extends/data.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../../static/js/extends/province.js" type="text/javascript" charset="utf-8"></script>
     <script src="HotelAdd.js" type="text/javascript" charset="utf-8"></script>
+
 
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
@@ -28,13 +32,43 @@
         <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>酒店名称</label>
             <div class="layui-input-block">
-                <input id="name" type="text" name="name" lay-verify="required" jq-error="请输入酒店名称" placeholder="请输入酒店名称" autocomplete="off" class="layui-input ">
+                <input id="name" type="text" name="name" lay-verify="required" jq-error="请输入酒店名称" placeholder="请输入酒店名称"
+                       autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+
+
+        <div class="layui-form-item">
+            <div class="layui-inline citys">
+                <label class="layui-form-label"><span class="we-red">*</span>所属地区</label>
+                <div class="layui-input-inline">
+                    <select  id='province' name="province" lay-filter="province" class="province">
+                        <option value="">请选择省</option>
+                    </select>
+                </div>
+                <div class="layui-input-inline">
+                    <select name="city"  id="city" lay-filter="city" >
+                        <option value="">请选择市</option>
+                    </select>
+                </div>
+                <div class="layui-input-inline">
+                    <select name="area" id="area"lay-filter="area" >
+                        <option value="">请选择县/区</option>
+                    </select>
+                </div>
+                <!--<div class="layui-input-inline">-->
+                    <!--<select name="town" id="town"lay-filter="town" >-->
+                        <!--<option value="">请选择街道</option>-->
+                    <!--</select>-->
+                <!--</div>-->
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">酒店地址</label>
+            <label class="layui-form-label"><span class="we-red">*</span>酒店地址</label>
             <div class="layui-input-block">
-                <input  id="address" lay-verType="tips" type="text" name="address" lay-verify="required" jq-error="请输入酒店地址" placeholder="请输入酒店地址,如‘四川省成都市高新区天府大道北段1736号’" autocomplete="off" class="layui-input ">
+                <input id="address" lay-verType="tips" type="text" name="address" lay-verify="required"
+                       jq-error="请输入酒店地址" placeholder="请输入酒店地址,如‘四川省成都市高新区天府大道北段1736号’" autocomplete="off"
+                       class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
@@ -45,15 +79,15 @@
         <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">酒店简介</label>
             <div class="layui-input-block">
-                <textarea name="hotel_profile" placeholder="酒店简介" class="layui-textarea"></textarea>
+                <textarea name="hotel_profile" id="hotel_profile" placeholder="酒店简介" class="layui-textarea"></textarea>
             </div>
         </div>
-        <div class="layui-form-item layui-hide" >
+        <div class="layui-form-item layui-hide">
 
-            <div class="layui-inline" >
+            <div class="layui-inline">
                 <label class="layui-form-label">经度</label>
                 <div class="layui-input-inline" style="width: 100px;">
-                    <input type="text" name="longitude"  autocomplete="off" class="layui-input">
+                    <input type="text" name="longitude" autocomplete="off" class="layui-input">
                 </div>
 
             </div>
@@ -67,19 +101,19 @@
 
         </div>
         <div class="layui-form-item">
-        <div class="layui-input-block layui-upload">
-            <button type="button" class="layui-btn" id="test2">选择酒店图片</button>
-            <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
-                酒店图片：
-                <div class="layui-upload-list" id="demo2"></div>
-            </blockquote>
-        </div>
+            <div class="layui-input-block layui-upload">
+                <button type="button" class="layui-btn" id="test2">选择酒店图片</button>
+                <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
+                    酒店图片：
+                    <div class="layui-upload-list" id="demo2"></div>
+                </blockquote>
+            </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">状态</label>
             <div class="layui-input-inline">
-                <input id="radio1" type="radio" name="status" title="启用" value="1" checked />
-                <input  id="radio2"type="radio" name="status" title="禁用" value="0" />
+                <input id="radio1" type="radio" name="status" title="启用" value="1" checked/>
+                <input id="radio2" type="radio" name="status" title="禁用" value="0"/>
             </div>
         </div>
         <div class="layui-form-item">
@@ -88,7 +122,7 @@
                 <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
-        <input type="hidden" name="hotelnum" value="0" />
+        <input type="hidden" name="hotelnum" value="0"/>
     </form>
 </div>
 
