--- a/pages/composite/hotelmanage/hotel_manage.html
+++ b/pages/composite/hotelmanage/hotel_manage.html
@@ -41,7 +41,7 @@
     </div>
     <div class="weadmin-block">
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="WeAdminShow('创建酒店','./HotelAdd.html',800,600)"><i class="layui-icon"></i>添加
+        <button class="layui-btn" onclick="WeAdminShow('创建酒店','./HotelAdd.html')"><i class="layui-icon"></i>添加
         </button>
         <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
