--- a/pages/goods/goods_styleAdd.html
+++ b/pages/goods/goods_styleAdd.html
@@ -34,7 +34,7 @@
         <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">类型简介</label>
             <div class="layui-input-block">
-                <textarea  id="hotel_profile" name="hotel_profile" placeholder="房间类型简介" class="layui-textarea"></textarea>
+                <textarea  id="hotel_profile" name="hotel_profile" placeholder="商品类型简介" class="layui-textarea"></textarea>
             </div>
         </div>
      <!--   <div class="layui-form-item">
@@ -46,10 +46,10 @@
         <div class="layui-form-item">
             <div class="layui-input-block layui-upload">
                 <button type="button" class="layui-btn" id="test2">选择图片</button>
-                <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
-                    预览：
-                    <div class="layui-upload-list" id="demo2"></div>
-                </blockquote>
+                <div class="layui-upload-list">
+                    <img  style="width: 300px;height: 300px" class="layui-upload-img" id="demo1">
+                    <p id="demoText"></p>
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
