--- a/pages/goods/goods_manage.html
+++ b/pages/goods/goods_manage.html
@@ -33,12 +33,12 @@
         <form class="layui-form layui-col-md12 we-search">
             商品类型：
             <div class="layui-input-inline">
-                <select name="goodsStyle_select" id="goodsStyle_select">
+                <select name="category" id="goodsStyle_select">
                 </select>
             </div>
             商品搜索：
             <div class="layui-inline">
-                <input id="goodsname" type="text" name="goodsname" placeholder="请输入商品名称" autocomplete="off" class="layui-input">
+                <input id="goodsname" type="text" name="search" placeholder="请输入商品名称" autocomplete="off" class="layui-input">
             </div>
             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
         </form>
