--- a/pages/goods/GoodsAdd.html
+++ b/pages/goods/GoodsAdd.html
@@ -6,7 +6,8 @@
     <title>创建商品</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../../static/css/font.css">
     <link rel="stylesheet" href="../../static/css/weadmin.css">
     <script src="../../lib/layui/layui.js" charset="utf-8"></script>
@@ -25,8 +26,8 @@
     <form id="form1" class="layui-form">
         <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>商品类型</label>
-            <div class="layui-input-block">
-                <select  name="category_name" id="category_name" lay-verify="required" lay-filter="pid-select">
+            <div class="layui-input-inline">
+                <select name="category" id="category" lay-verify="required" lay-filter="pid-select">
                 </select>
             </div>
         </div>
@@ -34,20 +35,37 @@
         <div class="layui-form-item">
             <label class="layui-form-label">商品名称</label>
             <div class="layui-input-inline">
-                <input  id="goods_name" lay-verType="tips" type="text" name="goods_name" lay-verify="required"  placeholder="商品名称，如‘薯片’" autocomplete="off" class="layui-input ">
+                <input id="goods_name" lay-verType="tips" type="text" name="goods_name" lay-verify="required"
+                       placeholder="商品名称，如‘薯片’" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">商品价格</label>
             <div class="layui-input-inline">
-                <input  id="goods_price" lay-verType="tips" type="number" name="goods_price" lay-verify="required"  placeholder="商品价格" autocomplete="off" class="layui-input ">
+                <input id="goods_price" lay-verType="tips" type="number" name="goods_price" lay-verify="required"
+                       placeholder="商品价格" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">积分换取</label>
+            <div class="layui-input-inline">
+                <input id="radio3" type="radio" lay-filter="is_integral" name="is_integral" title="是" value="1"
+                       checked/>
+                <input id="radio4" type="radio" lay-filter="is_integral" name="is_integral" title="否" value="0"/>
+            </div>
+        </div>
+        <div class="layui-form-item " id="need_div">
+            <label class="layui-form-label">消费积分</label>
+            <div class="layui-input-inline">
+                <input id="need_integral" lay-verType="tips" type="number" name="need_integral"
+                       placeholder="当前商品需要的积分数" autocomplete="off" class="layui-input " value="0">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">状态</label>
             <div class="layui-input-inline">
-                <input id="radio1" type="radio" name="is_active" title="启用" value="1" checked />
-                <input  id="radio2"type="radio" name="is_active" title="禁用" value="0" />
+                <input id="radio1" type="radio" name="is_active" title="启用" value="1" checked/>
+                <input id="radio2" type="radio" name="is_active" title="禁用" value="0"/>
             </div>
         </div>
         <div class="layui-form-item">
@@ -56,7 +74,7 @@
                 <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
-        <input type="hidden" name="hotelnum" value="0" />
+        <input type="hidden" name="hotelnum" value="0"/>
     </form>
 </div>
 
