--- a/pages/member/password.html
+++ b/pages/member/password.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<div class="layui-form-item">
-					<label for="L_repass" class="layui-form-label">
+					<label for="L_pass1" class="layui-form-label">
               </label>
 					<button class="layui-btn" lay-filter="save" lay-submit="">确定</button>
 				</div>
