--- a/pages/composite/tagManage/tagAdd.html
+++ b/pages/composite/tagManage/tagAdd.html
@@ -25,56 +25,18 @@
 
     <form id="form1" class="layui-form">
         <div class="layui-form-item">
-            <label class="layui-form-label"><span class="we-red">*</span>商品类型</label>
+            <label class="layui-form-label"><span class="we-red">*</span>标签名字</label>
             <div class="layui-input-inline">
-                <select name="category" id="category" lay-verify="required" lay-filter="pid-select">
-                </select>
+                <input id="name" lay-verType="tips" type="text" name="name" lay-verify="required"
+                       placeholder="标签名字，如‘wifi’" autocomplete="off" class="layui-input ">
             </div>
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label">商品名称</label>
-            <div class="layui-input-inline">
-                <input id="goods_name" lay-verType="tips" type="text" name="goods_name" lay-verify="required"
-                       placeholder="商品名称，如‘薯片’" autocomplete="off" class="layui-input ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">商品价格</label>
-            <div class="layui-input-inline">
-                <input id="goods_price" lay-verType="tips" type="number" name="goods_price" lay-verify="required"
-                       placeholder="商品价格" autocomplete="off" class="layui-input ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">积分换取</label>
-            <div class="layui-input-inline">
-                <input id="radio3" type="radio" lay-filter="is_integral" name="is_integral" title="是" value="1"
-                       checked/>
-                <input id="radio4" type="radio" lay-filter="is_integral" name="is_integral" title="否" value="0"/>
-            </div>
-        </div>
-        <div class="layui-form-item " id="need_div">
-            <label class="layui-form-label">消费积分</label>
-            <div class="layui-input-inline">
-                <input id="need_integral" lay-verType="tips" type="number" name="need_integral"
-                       placeholder="当前商品需要的积分数" autocomplete="off" class="layui-input " value="0">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">状态</label>
-            <div class="layui-input-inline">
-                <input id="radio1" type="radio" name="is_active" title="启用" value="1" checked/>
-                <input id="radio2" type="radio" name="is_active" title="禁用" value="0"/>
-            </div>
-        </div>
-        <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
-                <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
-        <input type="hidden" name="hotelnum" value="0"/>
     </form>
 </div>
 
