--- a/pages/member/recharge/rechargeInfo.html
+++ b/pages/member/recharge/rechargeInfo.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>积分列表</title>
+    <title>充值记录列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -21,7 +21,7 @@
 			<span class="layui-breadcrumb">
 
         <a>
-          <cite>提取记录列表</cite></a>
+          <cite>充值记录列表</cite></a>
       </span>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">&#x1002;</i></a>
@@ -29,31 +29,15 @@
 
 <div class="weadmin-body">
     <div class="layui-row">
-        <form class="layui-form layui-col-md12 we-search">
-           提取状态：
+        <!--<form class="layui-form layui-col-md12 we-search">
+            提取状态：
 
             <div class="layui-inline">
-              <!--  PICK_STATUS = (
-                (10, '提交申请'),
-                (20, '正在处理'),
-                (30, '转账中'),
-                (40, '完成'),
-                (50, '提取失败'),
-                (60, '取消申请'),
-                )-->
-                <select name="search" id="search" lay-verify="required" lay-filter="search">
-                    <option value=""></option>
-                    <option value="10">提交申请</option>
-                    <option value="20">正在处理</option>
-                    <option value="30">转账中</option>
-                    <option value="40">完成</option>
-                    <option value="50">提取失败</option>
-                    <option value="60">取消申请</option>
-                </select>
+                <input type="text" id="search" name="search" placeholder="" autocomplete="off" class="layui-input">
             </div>
 
             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
-        </form>
+        </form>-->
     </div>
     <div class="weadmin-block">
         <span class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span></span>
@@ -67,7 +51,7 @@
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
 <script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
-<script src="pickList.js" type="text/javascript" charset="utf-8"></script>
+<script src="rechargeInfo.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看详情</a>
 </script>
