--- a/pages/member/recharge/rechargeSetting.html
+++ b/pages/member/recharge/rechargeSetting.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>申请列表</title>
+    <title>充值配置</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../../../static/css/font.css">
     <link rel="stylesheet" href="../../../static/css/weadmin.css">
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
@@ -19,43 +20,39 @@
 <body>
 <div class="weadmin-nav">
 			<span class="layui-breadcrumb">
-
         <a>
-          <cite>申请列表</cite></a>
+          <cite>充值配置</cite></a>
       </span>
-    <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
+    <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right"
+       href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">&#x1002;</i></a>
 </div>
 
 <div class="weadmin-body">
     <div class="layui-row">
-        <form class="layui-form layui-col-md12 we-search">
-            会员积分搜索：
-
-            <div class="layui-inline">
-                <input type="text" id="user_name_contains" name="user_name__contains" placeholder="请输入会员账号" autocomplete="off" class="layui-input">
-            </div>
-
-            <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
-        </form>
     </div>
     <div class="weadmin-block">
-        <span class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span></span>
+        <button class="layui-btn" id="add" ><i class="layui-icon"></i>添加</button>
+        <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
-    <table class="layui-table" id="memberList" lay-filter="memberList">
+    <table class="layui-table" id="settingList" lay-filter="settingList">
+
     </table>
     <div class="page">
-
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
+<!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
+<script src="rechargeSetting.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
-<script src="applyList.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看详情</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
-
+<script type="text/html" id="switchTpl">
+    <input type="checkbox" disabled="disabled" name="is_active" value="{{d.is_active}}" lay-skin="switch" lay-text="启用|禁用" lay-filter="is_active" {{ d.is_active? 'checked' : '' }}>
+</script>
 </body>
 
 </html>
