--- a/pages/member/recharge/rechargeSettingAdd.html
+++ b/pages/member/recharge/rechargeSettingAdd.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>提取详情信息</title>
+    <title>创建商品类型</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../../../static/css/font.css">
     <link rel="stylesheet" href="../../../static/css/weadmin.css">
     <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
-    <script src="pickDetail.js" type="text/javascript" charset="utf-8"></script>
+    <script src="rechargeSettingAdd.js" type="text/javascript" charset="utf-8"></script>
 
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
@@ -25,48 +25,32 @@
     <form id="form1" class="layui-form">
 
         <div class="layui-form-item">
-            <label class="layui-form-label">用户姓名</label>
+            <label class="layui-form-label"><span class="we-red">*</span>充值金额</label>
             <div class="layui-input-inline">
-                <input  id="consumer_name"  class="layui-input ">
+                <input  id="recharge_price" lay-verType="tips" type="number" name="recharge_price" lay-verify="required"  placeholder="请输入充值金额" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label"><span class="we-red">*</span>奖励金</label>
+            <div class="layui-input-inline">
+                <input  id="free_balance" lay-verType="tips" type="number" name="free_balance" lay-verify="required"  placeholder="请输入奖励金额" autocomplete="off" class="layui-input ">
             </div>
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label">提取状态</label>
+            <label class="layui-form-label">状态</label>
             <div class="layui-input-inline">
-                <input  id="pick_status_display"  class="layui-input ">
+                <input id="radio1" type="radio" name="is_active" title="启用" value="1" checked />
+                <input  id="radio2"type="radio" name="is_active" title="禁用" value="0" />
             </div>
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">提取金额</label>
-            <div class="layui-input-inline">
-                <input  id="pick_money"  class="layui-input ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">支付方式</label>
-            <div class="layui-input-block">
-                <input  id="transfer_type_display"  class="layui-input ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">提取账户</label>
-            <div class="layui-input-block">
-                <input  id="bank"  class="layui-input ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">申请时间</label>
-            <div class="layui-input-inline">
-                <input  id="pick_time"  class="layui-input ">
-            </div>
-        </div>
-
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button id="close" class="layui-btn layui-btn-primary">关闭</button>
+                <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
+                <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
+        <input type="hidden" name="hotelnum" value="0" />
     </form>
 
 
