--- a/pages/order/hotelOrderList.html
+++ b/pages/order/hotelOrderList.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>订单列表</title>
+    <title>酒店订单列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -21,7 +21,7 @@
 			<span class="layui-breadcrumb">
 
         <a>
-          <cite>订单列表</cite></a>
+          <cite>酒店订单列表</cite></a>
       </span>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">&#x1002;</i></a>
@@ -30,40 +30,37 @@
 <div class="weadmin-body">
     <div class="layui-row">
         <form class="layui-form layui-col-md12 we-search">
-            会员搜索：
+            订单状态：
             <div class="layui-inline">
-                <input class="layui-input" placeholder="开始日期" name="start" id="start">
+
+                <select name="order_status" id="order_status"  lay-filter="search">
+                    <option value=""></option>
+                    <option value="10">待支付</option>
+                    <option value="40">已完成</option>
+                    <option value="50">已取消</option>
+                </select>
             </div>
             <div class="layui-inline">
-                <input class="layui-input" placeholder="截止日期" name="end" id="end">
+                <input type="text" id="consumer__user_name" name="consumer__user_name" placeholder="请输入会员名" autocomplete="off" class="layui-input">
             </div>
-            <div class="layui-inline">
-                <input type="text" id="user_name__contains" name="user_name__contains" placeholder="请输入会员名" autocomplete="off" class="layui-input">
-            </div>
-            <div class="layui-inline">
-                <input type="text" id="phone__contains" name="phone__contains" placeholder="手机号查询" autocomplete="off" class="layui-input">
-            </div>
+
             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
         </form>
     </div>
     <div class="weadmin-block">
         <span class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span></span>
     </div>
-    <table class="layui-table" id="memberList" lay-filter="memberList">
+    <table class="layui-table" id="orderList" lay-filter="orderList">
     </table>
-    <div class="page">
-
+    <div  id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="../../lib/layui/layui.js" charset="utf-8"></script>
 <script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
-<script src="orderList.js" type="text/javascript" charset="utf-8"></script>
+<script src="hotelOrderList.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看详情</a>
-</script>
-<script type="text/html" id="switchTpl">
-    <input type="checkbox" disabled="disabled" name="is_active" value="{{d.is_distribution}}" lay-skin="switch" lay-text="是|否" lay-filter="is_active" {{ d.is_distribution? 'checked' : '' }}>
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看/修改</a>
 </script>
 </body>
 
