--- a/pages/composite/rooms/room_styleAdd.html
+++ b/pages/composite/rooms/room_styleAdd.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </div>
-        <input type="hidden" id="cover_images" name="cover_images" lay-verType="tips" type="text" lay-verify="required"/>
+        <input type="hidden" id="cover_images" name="cover_images" lay-verType="tips" type="text" />
         <div class="layui-form-item">
             <div class=" layui-input-block layui-upload">
                 <button type="button" class="layui-btn " id="testList">选择详情图片</button>
@@ -87,7 +87,7 @@
 
                         <div id="layer-photos-demo" class="layer-photos-demo"></div>
                 </div>
-                <button type="button" class="layui-btn" id="testListAction">开始上传</button>
+                <!--<button type="button" class="layui-btn" id="testListAction">开始上传</button>-->
             </div>
         </div>
         <div class="layui-form-item">
