--- a/pages/goods/goods_styleAdd.html
+++ b/pages/goods/goods_styleAdd.html
@@ -31,27 +31,22 @@
             </div>
         </div>
 
-        <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">类型简介</label>
-            <div class="layui-input-block">
-                <textarea  id="hotel_profile" name="hotel_profile" placeholder="商品类型简介" class="layui-textarea"></textarea>
-            </div>
-        </div>
-     <!--   <div class="layui-form-item">
-            <label class="layui-form-label">价格</label>
-            <div class="layui-input-inline">
-                <input  id="price" lay-verType="tips" type="number" name="price" lay-verify="required"  placeholder="价格" autocomplete="off" class="layui-input ">
-            </div>
-        </div>-->
-        <div class="layui-form-item">
-            <div class="layui-input-block layui-upload">
-                <button type="button" class="layui-btn" id="test2">选择图片</button>
-                <div class="layui-upload-list">
-                    <img  style="width: 300px;height: 300px" class="layui-upload-img" id="demo1">
-                    <p id="demoText"></p>
-                </div>
-            </div>
-        </div>
+        <!--<div class="layui-form-item layui-form-text">-->
+            <!--<label class="layui-form-label">类型简介</label>-->
+            <!--<div class="layui-input-block">-->
+                <!--<textarea  id="hotel_profile" name="hotel_profile" placeholder="商品类型简介" class="layui-textarea"></textarea>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!---->
+        <!--<div class="layui-form-item">-->
+            <!--<div class="layui-input-block layui-upload">-->
+                <!--<button type="button" class="layui-btn" id="test2">选择图片</button>-->
+                <!--<div class="layui-upload-list">-->
+                    <!--<img  style="width: 300px;height: 300px" class="layui-upload-img" id="demo1">-->
+                    <!--<p id="demoText"></p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="layui-form-item">
             <label class="layui-form-label">状态</label>
             <div class="layui-input-inline">
