--- a/pages/member/apply/applyList.html
+++ b/pages/member/apply/applyList.html
@@ -44,7 +44,7 @@
     </div>
     <table class="layui-table" id="memberList" lay-filter="memberList">
     </table>
-    <div class="page">
+    <div id="page">
 
     </div>
 </div>
