--- a/pages/member/consumer.html
+++ b/pages/member/consumer.html
@@ -49,9 +49,9 @@
 			<div class="weadmin-block">
 				<span class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span></span>
 			</div>
-			<table class="layui-table" id="memberList" lay-filter="memberList">
+			<table class="layui-table" id="list" lay-filter="list">
 			</table>
-			<div class="page">
+			<div id="page">
 
 			</div>
 		</div>
