--- a/pages/assistant/roleManage.html
+++ b/pages/assistant/roleManage.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>充值配置</title>
+    <title>角色管理</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../../../static/css/font.css">
-    <link rel="stylesheet" href="../../../static/css/weadmin.css">
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/weadmin.css">
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -21,7 +21,7 @@
 <div class="weadmin-nav">
 			<span class="layui-breadcrumb">
         <a>
-          <cite>充值配置</cite></a>
+          <cite>角色管理</cite></a>
       </span>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right"
        href="javascript:location.replace(location.href);" title="刷新">
@@ -30,28 +30,35 @@
 
 <div class="weadmin-body">
     <div class="layui-row">
+        <form class="layui-form layui-col-md12 we-search">
+            角色名：
+
+            <div class="layui-inline">
+                <input id="search" type="text" name="search" placeholder="请输入角色名" autocomplete="off" class="layui-input">
+            </div>
+            <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
+        </form>
     </div>
     <div class="weadmin-block">
-        <button class="layui-btn" id="add" ><i class="layui-icon"></i>添加</button>
+
+        <button class="layui-btn" onclick="WeAdminShow('新建角色','./roleAdd.html')"><i class="layui-icon"></i>添加
+        </button>
         <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
-    <table class="layui-table" id="settingList" lay-filter="settingList">
+    <table class="layui-table" id="staffList" lay-filter="staffList">
 
     </table>
     <div id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
-<script src="../../../lib/layui/layui.js" charset="utf-8"></script>
+<script src="../../lib/layui/layui.js" charset="utf-8"></script>
 <!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
-<script src="rechargeSetting.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
+<script src="roleManage.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-</script>
-<script type="text/html" id="switchTpl">
-    <input type="checkbox" disabled="disabled" name="is_active" value="{{d.is_active}}" lay-skin="switch" lay-text="启用|禁用" lay-filter="is_active" {{ d.is_active? 'checked' : '' }}>
 </script>
 </body>
 
