--- a/pages/assistant/staff_center.html
+++ b/pages/assistant/staff_center.html
@@ -48,7 +48,7 @@
     <table class="layui-table" id="staffList" lay-filter="staffList">
 
     </table>
-    <div class="page">
+    <div id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
@@ -57,9 +57,13 @@
 <script src="staff_center.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+
+    <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="assign">授权</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+</script>
+<script type="text/html" id="switchTpl">
+    <input type="checkbox" disabled="disabled" name="is_active" value="{{d.is_active}}" lay-skin="switch" lay-text="启用|禁用" lay-filter="is_active" {{ d.is_active? 'checked' : '' }}>
 </script>
 </body>
 
