--- a/pages/composite/hotelmanage/hotel_manage.html
+++ b/pages/composite/hotelmanage/hotel_manage.html
@@ -40,7 +40,7 @@
         </form>
     </div>
     <div class="weadmin-block">
-        <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
+        <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>-->
         <button class="layui-btn" onclick="WeAdminShow('创建酒店','./HotelAdd.html')"><i class="layui-icon"></i>添加
         </button>
         <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
@@ -48,7 +48,7 @@
     <table class="layui-table" id="hotelList" lay-filter="hotelList">
 
     </table>
-    <div class="page">
+    <div id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
@@ -57,8 +57,7 @@
 <script src="hotel_manage.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 </body>
