--- a/pages/composite/rooms/room_style_manage.html
+++ b/pages/composite/rooms/room_style_manage.html
@@ -45,10 +45,10 @@
         </button>
         <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
-    <table class="layui-table" id="roomstylelist" lay-filter="roomstylelist">
+    <table class="layui-table" id="list" lay-filter="list">
 
     </table>
-    <div class="page">
+    <div id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
@@ -57,8 +57,7 @@
 <script src="room_style_manage.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script type="text/html" id="switchTpl">
