--- a/pages/composite/tagManage/tagManage.html
+++ b/pages/composite/tagManage/tagManage.html
@@ -48,7 +48,7 @@
     <table class="layui-table" id="goodslist" lay-filter="goodslist">
 
     </table>
-    <div class="page">
+    <div id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
