--- a/pages/goods/goods_style_manage.html
+++ b/pages/goods/goods_style_manage.html
@@ -48,7 +48,7 @@
     <table class="layui-table" id="goodsstylelist" lay-filter="goodsstylelist">
 
     </table>
-    <div class="page">
+    <div id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
@@ -57,8 +57,7 @@
 <script src="goods_style_manage.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script type="text/html" id="switchTpl">
