--- a/pages/order/hotelOrderDetail.html
+++ b/pages/order/hotelOrderDetail.html
@@ -6,7 +6,8 @@
     <title>酒店订单详情</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../../static/css/font.css">
     <link rel="stylesheet" href="../../static/css/weadmin.css">
     <script src="../../lib/layui/layui.js" charset="utf-8"></script>
@@ -17,98 +18,194 @@
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
 
 <body>
 <div class="weadmin-body">
 
     <form id="form1" class="layui-form">
+        <div class="site-title">
+            <fieldset>
+                <legend><a name="ignore">订单信息</a></legend>
+            </fieldset>
+        </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">订单号</label>
-            <div class="layui-input-inline">
-                <input  id="order_id"  class="layui-input nochange">
+            <div class="layui-inline">
+                <label class="layui-form-label">订单号</label>
+                <div class="layui-input-inline">
+                    <input id="order_id" type="text" name="order_id" class="layui-input nochange" readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">订单状态</label>
+                <div class="layui-input-inline">
+                    <input id="order_status_display" type="text" name="order_status_display"
+                           class="layui-input nochange" readonly>
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">用户账号</label>
-            <div class="layui-input-inline">
-                <input  id="consumer"  class="layui-input nochange ">
+            <div class="layui-inline">
+                <label class="layui-form-label">所属酒店</label>
+                <div class="layui-input-inline">
+                    <input id="belong_hotel_name" type="text" name="belong_hotel_name" class="layui-input nochange"
+                           readonly>
+                </div>
             </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">联系人</label>
-            <div class="layui-input-inline">
-                <input  id="contact_name"  class="layui-input nochange ">
+            <div class="layui-inline">
+                <label class="layui-form-label">下单时间</label>
+                <div class="layui-input-inline">
+                    <input id="create_time" type="text" name="create_time"
+                           class="layui-input nochange" readonly>
+                </div>
             </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">联系电话</label>
-            <div class="layui-input-inline">
-                <input  id="contact_phone"  class="layui-input nochange ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">房间类型</label>
-            <div class="layui-input-inline">
-                <input  id="room_style"  class="layui-input nochange ">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">房间数</label>
-            <div class="layui-input-inline">
-                <input  id="room_nums"  class="layui-input nochange ">
-            </div>
-        </div>
 
-
+        </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">订单金额</label>
-            <div class="layui-input-inline">
-                <input  id="sale_price" text="number" class="layui-input nochange">
+            <div class="layui-inline">
+                <label class="layui-form-label">房间类型</label>
+                <div class="layui-input-inline">
+                    <input id="hotel_order_detail_room_style_name" type="text" name="room_style_name"
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">房间数</label>
+                <div class="layui-input-inline">
+                    <input id="hotel_order_detail_room_nums" type="number" name="room_nums"
+                           class="layui-input nochange" readonly>
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">下单时间</label>
-            <div class="layui-input-inline">
-                <input  id="create_time"  class="layui-input nochange">
+            <div class="layui-inline">
+                <label class="layui-form-label">房间单价</label>
+                <div class="layui-input-inline">
+                    <input id="hotel_order_detail_room_price" type="number" name="room_price"
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">订单总价</label>
+                <div class="layui-input-inline">
+                    <input id="order_amount" type="number" name="order_amount"
+                           class="layui-input nochange" readonly>
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">入住时间</label>
-            <div class="layui-input-inline">
-                <input  id="reserve_check_in_time"  class="layui-input nochange">
+            <div class="layui-inline">
+                <label class="layui-form-label">入住时间</label>
+                <div class="layui-input-inline">
+                    <input id="hotel_order_detail_reserve_check_in_time" type="text" name="reserve_check_in_time"
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">退房时间</label>
+                <div class="layui-input-inline">
+                    <input id="hotel_order_detail_reserve_check_out_time" type="text" name="reserve_check_out_time"
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">共计天数</label>
+                <div class="layui-input-inline">
+                    <input id="hotel_order_detail_days" type="text" name="days"
+                           class="layui-input nochange" readonly>
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">退房时间</label>
-            <div class="layui-input-inline">
-                <input  id="reserve_check_out_time"   class="layui-input nochange">
+            <div class="layui-inline">
+                <label class="layui-form-label">联系人</label>
+                <div class="layui-input-inline">
+                    <input id="hotel_order_detail_contact_name" type="text" name="contact_name"
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">联系电话</label>
+                <div class="layui-input-inline">
+                    <input id="hotel_order_detail_contact_phone" type="text" name="contact_phone"
+                           class="layui-input nochange" readonly>
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">用户备注</label>
             <div class="layui-input-block">
-                <input  id="user_remark"   class="layui-input ">
+                <input id="user_remark" class="layui-input nochange" readonly>
             </div>
         </div>
+        <div class="layui-form-item layui-hide" id="refund_div">
+            <label class="layui-form-label">退款理由</label>
+            <div class="layui-input-block">
+                <input id="refund_reason" class="layui-input nochange" readonly>
+            </div>
+        </div>
+        <span id="pay_div" class="layui-hide">
+        <div class="site-title">
+            <fieldset>
+                <legend><a name="ignore">付款信息</a></legend>
+            </fieldset>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">付款单号</label>
+            <div class="layui-input-inline">
+                <input id="order_pay_wx_order_id" class="layui-input nochange ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">付款类型</label>
+                <div class="layui-input-inline">
+                    <input id="pay_type_display" type="text" name="pay_type_display" class="layui-input nochange"
+                           readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">付款时间</label>
+                <div class="layui-input-inline">
+                    <input id="pay_time" type="text" name="pay_time nochange" readonly
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">赠送金额</label>
+                <div class="layui-input-inline">
+                    <input id="order_pay_free_money" type="text" name="free_money" class="layui-input nochange"
+                           readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">实际金额</label>
+                <div class="layui-input-inline">
+                    <input id="order_pay_money" type="text" name="money"
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+        </div>
+</span>
         <hr class="layui-bg-green">
         <div class="layui-form-item">
             <label class="layui-form-label">订单状态</label>
             <div class="layui-input-inline">
-                <input  id="order_status_display"  class="layui-input">
+                <input id="change_order_status_display" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">店家备注</label>
             <div class="layui-input-block">
-                <input  id="flow_remark"   class="layui-input ">
+                <input id="operator_remark" class="layui-input ">
             </div>
         </div>
-
-
-
         <div class="layui-form-item">
             <div class="layui-input-block">
+                <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
                 <button id="close" class="layui-btn layui-btn-primary">关闭</button>
             </div>
         </div>
