--- a/pages/order/hotelOrderList.html
+++ b/pages/order/hotelOrderList.html
@@ -15,7 +15,14 @@
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-
+<!--ORDER_STATUS = (-->
+<!--(10, '未支付'),-->
+<!--(20, '待发货'),-->
+<!--(30, '待收货'),-->
+<!--(40, '已完成'),-->
+<!--(50, '已取消'),-->
+<!--(60, '等待评价'),-->
+<!--(70, '评价完成')  # 评价完成后才有积分-->
 <body>
 <div class="weadmin-nav">
 			<span class="layui-breadcrumb">
@@ -26,7 +33,8 @@
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">&#x1002;</i></a>
 </div>
-
+<!-- ( (10, '待支付'), (25, '待入住'), (30, '入住中'), (35, '完成待评价'),
+(40, '完成并且已评价'), (45, '取消'), (50, '待退款'), (55, '退款中'), (69, '已退款'), (65, '已过期') )-->
 <div class="weadmin-body">
     <div class="layui-row">
         <form class="layui-form layui-col-md12 we-search">
@@ -36,8 +44,15 @@
                 <select name="order_status" id="order_status"  lay-filter="search">
                     <option value=""></option>
                     <option value="10">待支付</option>
-                    <option value="40">已完成</option>
-                    <option value="50">已取消</option>
+                    <option value="20">待入住</option>
+                    <option value="30">入住中</option>
+                    <option value="35">完成待评价</option>
+                    <option value="40">完成并且已评价</option>
+                    <option value="40">取消</option>
+                    <option value="50">待退款</option>
+                    <option value="55">退款中</option>
+                    <option value="69">已退款</option>
+                    <option value="65">已过期</option>
                 </select>
             </div>
             <div class="layui-inline">
@@ -50,7 +65,7 @@
     <div class="weadmin-block">
         <span class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span></span>
     </div>
-    <table class="layui-table" id="orderList" lay-filter="orderList">
+    <table class="layui-table" id="lists" lay-filter="lists">
     </table>
     <div  id="page">
     </div>
@@ -60,7 +75,7 @@
 <script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script src="hotelOrderList.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看/修改</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit">查看/修改</a>
 </script>
 </body>
 
