--- a/pages/order/marketOrderList.html
+++ b/pages/order/marketOrderList.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>积分列表</title>
+    <title>商城订单列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../../../static/css/font.css">
-    <link rel="stylesheet" href="../../../static/css/weadmin.css">
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/weadmin.css">
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -21,34 +21,34 @@
 			<span class="layui-breadcrumb">
 
         <a>
-          <cite>提取记录列表</cite></a>
+          <cite>商城订单列表</cite></a>
       </span>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">&#x1002;</i></a>
 </div>
-
+<!--ORDER_STATUS = (-->
+<!--(10, '未支付'),-->
+<!--(20, '待发货'),-->
+<!--(30, '待收货'),-->
+<!--(40, '已完成'),-->
+<!--(50, '已取消'),-->
+<!--(60, '等待评价'),-->
+<!--(70, '评价完成')  # 评价完成后才有积分-->
 <div class="weadmin-body">
     <div class="layui-row">
         <form class="layui-form layui-col-md12 we-search">
-           提取状态：
-
+            订单状态：
             <div class="layui-inline">
-              <!--  PICK_STATUS = (
-                (10, '提交申请'),
-                (20, '正在处理'),
-                (30, '转账中'),
-                (40, '完成'),
-                (50, '提取失败'),
-                (60, '取消申请'),
-                )-->
-                <select name="search" id="search" lay-verify="required" lay-filter="search">
+
+                <select name="order_status" id="order_status"  lay-filter="search">
                     <option value=""></option>
-                    <option value="10">提交申请</option>
-                    <option value="20">正在处理</option>
-                    <option value="30">转账中</option>
-                    <option value="40">完成</option>
-                    <option value="50">提取失败</option>
-                    <option value="60">取消申请</option>
+                    <option value="10">待支付</option>
+                    <option value="20">待发货</option>
+                    <option value="30">待收货</option>
+                    <option value="40">已完成</option>
+                    <option value="50">已取消</option>
+                    <option value="60">等待评价</option>
+                    <option value="70">评价完成</option>
                 </select>
             </div>
 
@@ -58,20 +58,18 @@
     <div class="weadmin-block">
         <span class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span></span>
     </div>
-    <table class="layui-table" id="memberList" lay-filter="memberList">
+    <table class="layui-table" id="orderList" lay-filter="orderList">
     </table>
-    <div id="page">
-
+    <div  id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
-<script src="../../../lib/layui/layui.js" charset="utf-8"></script>
-<script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
-<script src="pickList.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../lib/layui/layui.js" charset="utf-8"></script>
+<script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
+<script src="marketOrderList.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看详情</a>
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看/修改</a>
 </script>
-
 </body>
 
 </html>
