--- a/pages/vip/vip_member.html
+++ b/pages/vip/vip_member.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>房间管理</title>
+    <title>会员</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../../../static/css/font.css">
-    <link rel="stylesheet" href="../../../static/css/weadmin.css">
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/weadmin.css">
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -21,7 +21,7 @@
 <div class="weadmin-nav">
 			<span class="layui-breadcrumb">
         <a>
-          <cite>房间管理</cite></a>
+          <cite>会员</cite></a>
       </span>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right"
        href="javascript:location.replace(location.href);" title="刷新">
@@ -31,36 +31,35 @@
 <div class="weadmin-body">
     <div class="layui-row">
         <form class="layui-form layui-col-md12 we-search">
-            房间搜索：
-
+            会员名搜索：
             <div class="layui-inline">
-                <input id="roomstyle" type="text" name="hotelname" placeholder="请输入房间号" autocomplete="off" class="layui-input">
+                <input id="search" type="text" name="search" placeholder="请输入会员名" autocomplete="off" class="layui-input">
             </div>
             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
         </form>
     </div>
     <div class="weadmin-block">
-        <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>onclick="AddHotel('创建酒店','./HotelAdd.html',800,600)"-->
-        <button class="layui-btn" id="add" ><i class="layui-icon"></i>添加
-        </button>
+        <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
+        --><!--onclick="AddHotel('创建酒店','./HotelAdd.html',800,600)"-->
         <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
-    <table class="layui-table" id="roomlist" lay-filter="roomlist">
+    <table class="layui-table" id="list" lay-filter="list">
 
     </table>
-    <div class="page">
+    <div id="page">
     </div>
 </div>
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
-<script src="../../../lib/layui/layui.js" charset="utf-8"></script>
+<script src="../../lib/layui/layui.js" charset="utf-8"></script>
 <!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
-<script src="room_manage.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
+<script src="vip_member.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    <a class="layui-btn layui-btn-xs" lay-event="detail">查看详情</a>
 </script>
+
+
 </body>
 
 </html>
