--- a/pages/assistant/StaffAdd.html
+++ b/pages/assistant/StaffAdd.html
@@ -68,6 +68,12 @@
                 <input  type="radio" name="sex" title="未知" value="10"/>
             </div>
         </div>
+        <div class="layui-form-item layui-hide" id="groups_div">
+            <label class="layui-form-label">所属角色</label>
+            <div class="layui-input-block" id="groups">
+
+            </div>
+        </div>
         <div class="layui-form-item">
             <label class="layui-form-label">是否启用</label>
             <div class="layui-input-inline">
