--- a/pages/composite/rooms/room_styleAdd.html
+++ b/pages/composite/rooms/room_styleAdd.html
@@ -49,7 +49,7 @@
                           class="layui-textarea"></textarea>
             </div>
         </div>
-        <div class="layui-form-item layui-hide" id="room_count_div">
+        <div class="layui-form-item" id="room_count_div">
             <label class="layui-form-label">房间总数</label>
             <div class="layui-input-inline">
                 <input id="room_count" lay-verType="tips" type="number" name="room_count"  placeholder="房间总数"
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <input type="hidden" id="cover_images" name="cover_images" lay-verType="tips" type="text" />
+        <input type="hidden" id="cover_image" name="cover_image" lay-verType="tips" type="text" />
         <div class="layui-form-item">
             <div class=" layui-input-block layui-upload">
                 <button type="button" class="layui-btn " id="testList">选择详情图片</button>
