--- a/pages/order/marketOrderDetail.html
+++ b/pages/order/marketOrderDetail.html
@@ -151,6 +151,29 @@
                 </div>
             </div>
         </div>
+             <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">赠送金额</label>
+                <div class="layui-input-inline">
+                    <input id="order_pay_free_money" type="text" name="free_money" class="layui-input nochange"
+                           readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">实际金额</label>
+                <div class="layui-input-inline">
+                    <input id="order_pay_money" type="text" name="money"
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+                  <div class="layui-inline">
+                <label class="layui-form-label">消费积分</label>
+                <div class="layui-input-inline">
+                    <input id="order_pay_integral" type="text" name="integral"
+                           class="layui-input nochange" readonly>
+                </div>
+            </div>
+        </div>
 </span>
         <hr class="layui-bg-green">
         <div class="layui-form-item">
